log
Thu Apr 21 11:27:08 HSP 2022: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:20: error: too few arguments to function 'createTreeNode'
     TreeMap* new = createTreeNode();
                    ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c:40:14: error: unused variable 'new' [-Werror=unused-variable]
     TreeMap* new = createTreeNode();
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d0f6b4c
Thu Apr 21 11:27:18 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
240ef45
Thu Apr 21 11:28:33 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:85:27: error: statement with no effect [-Werror=unused-value]
             tree->current == aux;
             ~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aaea1dd
